--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -3,256 +3,8 @@ $icon-font-path: "../bower_components/bootstrap-sass-official/assets/fonts/boots
 @import "bootstrap-sass-official/assets/stylesheets/_bootstrap.scss";
 // endbower
 
-.browsehappy {
-  margin: 0.2em 0;
-  background: #ccc;
-  color: #000;
-  padding: 0.2em 0;
-}
-
-*,
-*:after,
-*::before {
-  -moz-box-sizing: border-box;
-  box-sizing: border-box;
-}
-
-html,
-body,
-.st-container,
-.st-pusher,
-.st-content {
-  height: 100%;
-  font-family: 'Open Sans', sans-serif;
-}
-
-.row { 
-  margin-left: 0 !important;
-  margin-right: 0 !important;
-  }
-
-
-.st-content {
-  overflow-y: scroll;
-  background: #f3efe0;
-}
-
-.st-content,
-.st-content-inner {
-  position: relative;
-  background: #E8EBF0;
-}
-
-.st-container {
-  position: relative;
-  overflow: hidden;
-}
-
-.st-pusher {
-  position: relative;
-  left: 0;
-  z-index: 99;
-  height: 100%;
-  -webkit-transition: -webkit-transform 0.5s;
-  transition: transform 0.5s;
-}
-
-.st-pusher::after {
-  position: absolute;
-  top: 0;
-  right: 0;
-  width: 0;
-  height: 0;
-  background: rgba(0,0,0,0.2);
-  content: '';
-  opacity: 0;
-  -webkit-transition: opacity 0.5s, width 0.1s 0.5s, height 0.1s 0.5s;
-  transition: opacity 0.5s, width 0.1s 0.5s, height 0.1s 0.5s;
-}
-
-.st-menu-open .st-pusher::after {
-  width: 100%;
-  height: 100%;
-  opacity: 1;
-  -webkit-transition: opacity 0.5s;
-  transition: opacity 0.5s;
-}
-
-.st-menu {
-  position: absolute;
-  top: 0;
-  left: 0;
-  z-index: 100;
-  visibility: hidden;
-  width: 300px;
-  height: 100%;
-  background: #3A4149;
-  -webkit-transition: all 0.5s;
-  transition: all 0.5s;
-}
-
-.st-menu::after {
-  position: absolute;
-  top: 0;
-  right: 0;
-  width: 100%;
-  height: 100%;
-  background: rgba(0,0,0,0.2);
-  content: '';
-  opacity: 1;
-  -webkit-transition: opacity 0.5s;
-  transition: opacity 0.5s;
-}
-
-.st-menu-open .st-menu::after {
-  width: 0;
-  height: 0;
-  opacity: 0;
-  -webkit-transition: opacity 0.5s, width 0.1s 0.5s, height 0.1s 0.5s;
-  transition: opacity 0.5s, width 0.1s 0.5s, height 0.1s 0.5s;
-}
-
-/* content style */
-
-.st-menu ul {
-  margin: 0;
-  padding: 0;
-  list-style: none;
-}
-
-.st-menu h2 {
-  margin: 0;
-  padding: 1em;
-  color: #fff;
-  text-shadow: 0 0 1px rgba(0,0,0,0.1);
-  font-weight: 300;
-  font-size: 2em;
-}
-
-.st-menu ul li a {
-  display: block;
-  padding: 1em 1em 1em 1.2em;
-  outline: none;
-  box-shadow: inset 0 -1px rgba(0,0,0,0.2);
-  color: #f3efe0;
-  text-transform: uppercase;
-  text-shadow: 0 0 1px rgba(255,255,255,0.1);
-  letter-spacing: 1px;
-  font-weight: 400;
-  -webkit-transition: background 0.3s, box-shadow 0.3s;
-  transition: background 0.3s, box-shadow 0.3s;
-}
-
-.st-menu ul li:first-child a {
-  box-shadow: inset 0 -1px rgba(0,0,0,0.2), inset 0 1px rgba(0,0,0,0.2);
-}
-
-.st-menu ul li a:hover {
-  background: rgba(0,0,0,0.2);
-  box-shadow: inset 0 -1px rgba(0,0,0,0);
-  color: #fff;
-  text-decoration: none;
-}
-
-.header { 
-  height: 55px;
-  padding-top: 7px;
-  background-color: #fff;
-  border-bottom: 1px solid #D7DADF;
-}
-.form-control {
-  padding-top:5px;
-}
-.title {
-  font-size: 24px;
-}
-.inner {
-  background: #fff;
-  width: 275px;
-  margin-bottom: 25px;
-  border-bottom: 2px solid #D7DADF;
-}
-.inner h4,h6 {
-  padding-left: 10px;
-}
-.inner a:hover {
-  text-decoration: none;
-}
-.no-padding {
-  padding: 0;
-}
-.main {
-  padding-top: 25px;
-}
-.album-image {
-  width: 300px;
-}
-.inner-album {
-  padding-top: 10px;
-  background: #fff;
-  border-bottom: 2px solid #D7DADF;
-}
-.inner-tracks {
-  margin-top: 25px;
-  background: #fff;
-  border-bottom: 2px solid #D7DADF;
-}
-.inner-tracks img {
-  padding-top: 20px;
-  height: 150px;
-  padding-right: 20px;
-}
-.inner-tracks h3, .inner-tracks h5 {
-  float: none;
-}
-.row{
-    overflow: hidden; 
-}
-[class*="col-"]{
-    margin-bottom: -99999px;
-    padding-bottom: 99999px;
-}
-.back {
-  padding-bottom: 10px;
-}
-.table th {
-  width: 300px;
-}
-
-/* Individual effects */
-
-/* Effect 3: Push*/
-.st-effect-3.st-menu-open .st-pusher {
-  -webkit-transform: translate3d(300px, 0, 0);
-  transform: translate3d(300px, 0, 0);
-}
-
-.st-effect-3.st-menu {
-  -webkit-transform: translate3d(-100%, 0, 0);
-  transform: translate3d(-100%, 0, 0);
-}
-
-.st-effect-3.st-menu-open .st-effect-3.st-menu {
-  visibility: visible;
-  -webkit-transition: -webkit-transform 0.5s;
-  transition: transform 0.5s;
-}
-
-.st-effect-3.st-menu::after {
-  display: none;
-}
-
-/* Fallback example for browsers that don't support 3D transforms (and no JS fallback) */
-.no-csstransforms3d .st-pusher,
-.no-js .st-pusher {
-  padding-left: 300px;
-}
-.nav-player {
-  padding-top: 25px;
-  color: #fff;
-  text-align: center;
-}
-
-article,aside,details,figcaption,figure,footer,header,hgroup,main,nav,section,summary{
-  display:block;}
-
+// Load partials
+@import 'partials/_defaults.scss';
+@import 'partials/_header.scss';
+@import 'partials/_sidebar.scss';
+@import 'partials/_content.scss';
